Update SWITCH.md